Fix filter format help link icon overflow

--- a/docroot/modules/custom/layout_builder_custom/css/layout_builder_custom.overrides.css
+++ b/docroot/modules/custom/layout_builder_custom/css/layout_builder_custom.overrides.css
@@ -5,6 +5,11 @@
 #drupal-off-canvas {
   width: 100% !important;
 }
+
+#drupal-off-canvas .filter-help > a {
+  margin-right: 20px;
+}
+
 .ui-dialog.ui-dialog-off-canvas .ui-resizable-handle {
   width: 20px;
   height: 50px;
